--- a/results/wt_wave_results.html
+++ b/results/wt_wave_results.html
@@ -4,43 +4,211 @@
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Wave</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Variant assessed before wave</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Variant assessed after wave</th>
+<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Doses prior</th>
+<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Doses post</th>
+<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Only seropositives pre-wave</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Probability of increased titres at minimal pre-wave antibody levels (%, 95% CrI)</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Probability of increased titres at maximal pre-wave antibody levels (%, 95% CrI)</th>
-<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>50% reduction threshold (WHO BAU/ml, median, 95% CrI)</th>
-<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>80% reduction threshold (WHO BAU/ml, median, 95% CrI)</th>
-<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>IgG titres required to reduce probability of seroconversion by 50% (WHO BAU/ml, median, 95% CrI)</th>
+<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Y: 50% reduction threshold (WHO BAU/ml, median, 95% CrI)</th>
+<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Z: 80% reduction threshold (WHO BAU/ml, median, 95% CrI)</th>
+<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Proportion of seropositives with pre-wave antibody titres higher than threshold Y</th>
+<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Proportion of seropositives with pre-wave antibody titres higher than threshold Z</th>
+<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>N in subgroup</th>
+<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>N with increased titres</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style='text-align: center;'>2</td>
+<td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
-<td style='text-align: center;'>61.6 (50.1, 85.8)</td>
-<td style='text-align: center;'>16.0 (2.0, 27.9)</td>
-<td style='text-align: center;'>8.9 (3.0, 29.1)</td>
-<td style='text-align: center;'>19.8 (5.8, 109.6)</td>
-<td style='text-align: center;'>13.6 (4.5, 52.6)</td>
+<td style='text-align: center;'>84.3 (78.0, 90.1)</td>
+<td style='text-align: center;'>22.5 (1.7, 58.0)</td>
+<td style='text-align: center;'>868.5 (366.2, 2162.9)</td>
+<td style='text-align: center;'>1130.0 (>4500, >4500)</td>
+<td style='text-align: center;'>893.9 (2506.1, 2506.1)</td>
+<td style='text-align: center;'>1342.3 (>4500, >4500)</td>
+<td style='text-align: center;'>4.9 (11.0, 0.0)</td>
+<td style='text-align: center;'>6.7 (14.1, 2.5)</td>
+<td style='text-align: center;'>4.3 (8.6, 0.0)</td>
+<td style='text-align: center;'>185</td>
+<td style='text-align: center;'>147</td>
 </tr>
 <tr>
-<td style='text-align: center;'>3</td>
+<td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
-<td style='text-align: center;'>80.7 (70.3, 95.4)</td>
-<td style='text-align: center;'>68.9 (6.8, 89.3)</td>
-<td style='text-align: center;'>44.2 (1.2, >500)</td>
-<td style='text-align: center;'>143.8 (1.8, >500)</td>
-<td style='text-align: center;'>4785.1 (323.1, >500)</td>
+<td style='text-align: center;'>91.5 (68.0, 99.5)</td>
+<td style='text-align: center;'>13.4 (4.8, 25.8)</td>
+<td style='text-align: center;'>267.9 (113.1, 517.0)</td>
+<td style='text-align: center;'>294.0 (544.9, 544.9)</td>
+<td style='text-align: center;'>266.3 (488.2, 488.2)</td>
+<td style='text-align: center;'>411.5 (930.5, 930.5)</td>
+<td style='text-align: center;'>77.6 (86.2, 70.7)</td>
+<td style='text-align: center;'>77.6 (86.2, 72.4)</td>
+<td style='text-align: center;'>74.1 (79.3, 62.1)</td>
+<td style='text-align: center;'>59</td>
+<td style='text-align: center;'>19</td>
+</tr>
+<tr>
+<td style='text-align: center;'>4</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>72.5 (14.8, 96.7)</td>
+<td style='text-align: center;'>12.0 (0.4, 50.6)</td>
+<td style='text-align: center;'>558.3 (1.8, 2802.1)</td>
+<td style='text-align: center;'>669.7 (2539.4, 2539.4)</td>
+<td style='text-align: center;'>599.9 (1969.5, 1969.5)</td>
+<td style='text-align: center;'>920.6 (>5500, >5500)</td>
+<td style='text-align: center;'>62.5 (100.0, 37.5)</td>
+<td style='text-align: center;'>62.5 (100.0, 50.0)</td>
+<td style='text-align: center;'>62.5 (100.0, 0.0)</td>
+<td style='text-align: center;'>16</td>
+<td style='text-align: center;'>5</td>
+</tr>
+<tr>
+<td style='text-align: center;'>4</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>96.4 (78.3, 99.9)</td>
+<td style='text-align: center;'>46.9 (2.7, 93.3)</td>
+<td style='text-align: center;'>558.6 (2.8, >3000)</td>
+<td style='text-align: center;'>1095.3 (>3000, >3000)</td>
+<td style='text-align: center;'>643.0 (>3000, >3000)</td>
+<td style='text-align: center;'>916.9 (>3000, >3000)</td>
+<td style='text-align: center;'>8.0 (16.0, 0.0)</td>
+<td style='text-align: center;'>12.0 (32.0, 0.0)</td>
+<td style='text-align: center;'>12.0 (20.0, 0.0)</td>
+<td style='text-align: center;'>28</td>
+<td style='text-align: center;'>26</td>
+</tr>
+<tr>
+<td style='text-align: center;'>4</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>95.6 (67.5, 99.8)</td>
+<td style='text-align: center;'>33.6 (1.4, 90.2)</td>
+<td style='text-align: center;'>615.8 (4.4, >5500)</td>
+<td style='text-align: center;'>1001.1 (>5500, >5500)</td>
+<td style='text-align: center;'>669.8 (>5500, >5500)</td>
+<td style='text-align: center;'>1047.0 (>5500, >5500)</td>
+<td style='text-align: center;'>7.1 (21.4, 0.0)</td>
+<td style='text-align: center;'>7.1 (100.0, 0.0)</td>
+<td style='text-align: center;'>7.1 (21.4, 0.0)</td>
+<td style='text-align: center;'>28</td>
+<td style='text-align: center;'>25</td>
+</tr>
+<tr>
+<td style='text-align: center;'>4</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>92.4 (61.0, 99.7)</td>
+<td style='text-align: center;'>22.4 (2.9, 52.5)</td>
+<td style='text-align: center;'>469.3 (13.6, 1780.7)</td>
+<td style='text-align: center;'>620.7 (2511.6, 2511.6)</td>
+<td style='text-align: center;'>476.7 (1624.9, 1624.9)</td>
+<td style='text-align: center;'>852.4 (4479.0, 4479.0)</td>
+<td style='text-align: center;'>60.9 (78.3, 34.8)</td>
+<td style='text-align: center;'>60.9 (87.0, 39.1)</td>
+<td style='text-align: center;'>60.9 (65.2, 17.4)</td>
+<td style='text-align: center;'>23</td>
+<td style='text-align: center;'>12</td>
+</tr>
+<tr>
+<td style='text-align: center;'>4</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>85.5 (78.7, 93.3)</td>
+<td style='text-align: center;'>21.9 (1.3, 60.8)</td>
+<td style='text-align: center;'>867.5 (271.7, 2124.8)</td>
+<td style='text-align: center;'>1142.5 (>4500, >4500)</td>
+<td style='text-align: center;'>900.3 (2754.3, 2754.3)</td>
+<td style='text-align: center;'>1398.4 (>4500, >4500)</td>
+<td style='text-align: center;'>4.9 (11.0, 0.0)</td>
+<td style='text-align: center;'>6.7 (14.1, 1.8)</td>
+<td style='text-align: center;'>4.3 (8.6, 0.0)</td>
+<td style='text-align: center;'>163</td>
+<td style='text-align: center;'>130</td>
+</tr>
+<tr>
+<td style='text-align: center;'>4</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>90.2 (65.1, 99.5)</td>
+<td style='text-align: center;'>13.5 (5.0, 26.0)</td>
+<td style='text-align: center;'>270.3 (102.1, 536.9)</td>
+<td style='text-align: center;'>296.7 (560.5, 560.5)</td>
+<td style='text-align: center;'>267.9 (496.6, 496.6)</td>
+<td style='text-align: center;'>413.7 (1022.1, 1022.1)</td>
+<td style='text-align: center;'>77.6 (86.2, 70.7)</td>
+<td style='text-align: center;'>77.6 (87.9, 72.4)</td>
+<td style='text-align: center;'>74.1 (79.3, 56.9)</td>
+<td style='text-align: center;'>58</td>
+<td style='text-align: center;'>18</td>
+</tr>
+<tr>
+<td style='text-align: center;'>4</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>72.5 (14.8, 96.7)</td>
+<td style='text-align: center;'>12.0 (0.4, 50.6)</td>
+<td style='text-align: center;'>558.3 (1.8, 2802.1)</td>
+<td style='text-align: center;'>669.7 (2539.4, 2539.4)</td>
+<td style='text-align: center;'>599.9 (1969.5, 1969.5)</td>
+<td style='text-align: center;'>920.6 (>5500, >5500)</td>
+<td style='text-align: center;'>62.5 (100.0, 37.5)</td>
+<td style='text-align: center;'>62.5 (100.0, 50.0)</td>
+<td style='text-align: center;'>62.5 (100.0, 0.0)</td>
+<td style='text-align: center;'>16</td>
+<td style='text-align: center;'>5</td>
+</tr>
+<tr>
+<td style='text-align: center;'>4</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>96.0 (57.6, 99.9)</td>
+<td style='text-align: center;'>48.5 (3.1, 94.8)</td>
+<td style='text-align: center;'>528.4 (1.6, >3000)</td>
+<td style='text-align: center;'>1040.8 (>3000, >3000)</td>
+<td style='text-align: center;'>619.1 (>3000, >3000)</td>
+<td style='text-align: center;'>847.5 (>3000, >3000)</td>
+<td style='text-align: center;'>8.0 (96.0, 0.0)</td>
+<td style='text-align: center;'>12.0 (96.0, 0.0)</td>
+<td style='text-align: center;'>12.0 (96.0, 0.0)</td>
+<td style='text-align: center;'>25</td>
+<td style='text-align: center;'>23</td>
+</tr>
+<tr>
+<td style='text-align: center;'>4</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>95.6 (67.5, 99.8)</td>
+<td style='text-align: center;'>33.6 (1.4, 90.2)</td>
+<td style='text-align: center;'>615.8 (4.4, >5500)</td>
+<td style='text-align: center;'>1001.1 (>5500, >5500)</td>
+<td style='text-align: center;'>669.8 (>5500, >5500)</td>
+<td style='text-align: center;'>1047.0 (>5500, >5500)</td>
+<td style='text-align: center;'>7.1 (21.4, 0.0)</td>
+<td style='text-align: center;'>7.1 (100.0, 0.0)</td>
+<td style='text-align: center;'>7.1 (21.4, 0.0)</td>
+<td style='text-align: center;'>28</td>
+<td style='text-align: center;'>25</td>
 </tr>
 <tr>
 <td style='border-bottom: 2px solid grey; text-align: center;'>4</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>WT</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>WT</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>97.3 (91.1, 99.8)</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>12.1 (4.6, 22.0)</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>463.2 (305.6, 665.6)</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>757.3 (480.8, 1302.8)</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>509.3 (339.1, 752.3)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>92.4 (61.0, 99.7)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>22.4 (2.9, 52.5)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>469.3 (13.6, 1780.7)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>620.7 (2511.6, 2511.6)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>476.7 (1624.9, 1624.9)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>852.4 (4479.0, 4479.0)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>60.9 (78.3, 34.8)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>60.9 (87.0, 39.1)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>60.9 (65.2, 17.4)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>23</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>12</td>
 </tr>
 </tbody>
 </table>
