vaccine agnostic threshold

--- a/results/wt_wave_results.html
+++ b/results/wt_wave_results.html
@@ -22,13 +22,13 @@
 <td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>0</td>
+<td style='text-align: center;'>0</td>
+<td style='text-align: center;'>FALSE</td>
 <td style='text-align: center;'>84.3 (78.0, 90.1)</td>
 <td style='text-align: center;'>22.5 (1.7, 58.0)</td>
-<td style='text-align: center;'>868.5 (366.2, 2162.9)</td>
-<td style='text-align: center;'>1130.0 (>4500, >4500)</td>
 <td style='text-align: center;'>893.9 (2506.1, 2506.1)</td>
 <td style='text-align: center;'>1342.3 (>4500, >4500)</td>
-<td style='text-align: center;'>4.9 (11.0, 0.0)</td>
 <td style='text-align: center;'>6.7 (14.1, 2.5)</td>
 <td style='text-align: center;'>4.3 (8.6, 0.0)</td>
 <td style='text-align: center;'>185</td>
@@ -38,13 +38,13 @@
 <td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>1</td>
+<td style='text-align: center;'>1</td>
+<td style='text-align: center;'>FALSE</td>
 <td style='text-align: center;'>91.5 (68.0, 99.5)</td>
 <td style='text-align: center;'>13.4 (4.8, 25.8)</td>
-<td style='text-align: center;'>267.9 (113.1, 517.0)</td>
-<td style='text-align: center;'>294.0 (544.9, 544.9)</td>
 <td style='text-align: center;'>266.3 (488.2, 488.2)</td>
 <td style='text-align: center;'>411.5 (930.5, 930.5)</td>
-<td style='text-align: center;'>77.6 (86.2, 70.7)</td>
 <td style='text-align: center;'>77.6 (86.2, 72.4)</td>
 <td style='text-align: center;'>74.1 (79.3, 62.1)</td>
 <td style='text-align: center;'>59</td>
@@ -54,13 +54,13 @@
 <td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>2</td>
+<td style='text-align: center;'>2</td>
+<td style='text-align: center;'>FALSE</td>
 <td style='text-align: center;'>72.5 (14.8, 96.7)</td>
 <td style='text-align: center;'>12.0 (0.4, 50.6)</td>
-<td style='text-align: center;'>558.3 (1.8, 2802.1)</td>
-<td style='text-align: center;'>669.7 (2539.4, 2539.4)</td>
 <td style='text-align: center;'>599.9 (1969.5, 1969.5)</td>
 <td style='text-align: center;'>920.6 (>5500, >5500)</td>
-<td style='text-align: center;'>62.5 (100.0, 37.5)</td>
 <td style='text-align: center;'>62.5 (100.0, 50.0)</td>
 <td style='text-align: center;'>62.5 (100.0, 0.0)</td>
 <td style='text-align: center;'>16</td>
@@ -70,13 +70,13 @@
 <td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>0</td>
+<td style='text-align: center;'>1</td>
+<td style='text-align: center;'>FALSE</td>
 <td style='text-align: center;'>96.4 (78.3, 99.9)</td>
 <td style='text-align: center;'>46.9 (2.7, 93.3)</td>
-<td style='text-align: center;'>558.6 (2.8, >3000)</td>
-<td style='text-align: center;'>1095.3 (>3000, >3000)</td>
 <td style='text-align: center;'>643.0 (>3000, >3000)</td>
 <td style='text-align: center;'>916.9 (>3000, >3000)</td>
-<td style='text-align: center;'>8.0 (16.0, 0.0)</td>
 <td style='text-align: center;'>12.0 (32.0, 0.0)</td>
 <td style='text-align: center;'>12.0 (20.0, 0.0)</td>
 <td style='text-align: center;'>28</td>
@@ -86,13 +86,13 @@
 <td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>0</td>
+<td style='text-align: center;'>2</td>
+<td style='text-align: center;'>FALSE</td>
 <td style='text-align: center;'>95.6 (67.5, 99.8)</td>
 <td style='text-align: center;'>33.6 (1.4, 90.2)</td>
-<td style='text-align: center;'>615.8 (4.4, >5500)</td>
-<td style='text-align: center;'>1001.1 (>5500, >5500)</td>
 <td style='text-align: center;'>669.8 (>5500, >5500)</td>
 <td style='text-align: center;'>1047.0 (>5500, >5500)</td>
-<td style='text-align: center;'>7.1 (21.4, 0.0)</td>
 <td style='text-align: center;'>7.1 (100.0, 0.0)</td>
 <td style='text-align: center;'>7.1 (21.4, 0.0)</td>
 <td style='text-align: center;'>28</td>
@@ -102,13 +102,13 @@
 <td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>1</td>
+<td style='text-align: center;'>2</td>
+<td style='text-align: center;'>FALSE</td>
 <td style='text-align: center;'>92.4 (61.0, 99.7)</td>
 <td style='text-align: center;'>22.4 (2.9, 52.5)</td>
-<td style='text-align: center;'>469.3 (13.6, 1780.7)</td>
-<td style='text-align: center;'>620.7 (2511.6, 2511.6)</td>
 <td style='text-align: center;'>476.7 (1624.9, 1624.9)</td>
 <td style='text-align: center;'>852.4 (4479.0, 4479.0)</td>
-<td style='text-align: center;'>60.9 (78.3, 34.8)</td>
 <td style='text-align: center;'>60.9 (87.0, 39.1)</td>
 <td style='text-align: center;'>60.9 (65.2, 17.4)</td>
 <td style='text-align: center;'>23</td>
@@ -118,13 +118,13 @@
 <td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>0</td>
+<td style='text-align: center;'>0</td>
+<td style='text-align: center;'>TRUE</td>
 <td style='text-align: center;'>85.5 (78.7, 93.3)</td>
 <td style='text-align: center;'>21.9 (1.3, 60.8)</td>
-<td style='text-align: center;'>867.5 (271.7, 2124.8)</td>
-<td style='text-align: center;'>1142.5 (>4500, >4500)</td>
 <td style='text-align: center;'>900.3 (2754.3, 2754.3)</td>
 <td style='text-align: center;'>1398.4 (>4500, >4500)</td>
-<td style='text-align: center;'>4.9 (11.0, 0.0)</td>
 <td style='text-align: center;'>6.7 (14.1, 1.8)</td>
 <td style='text-align: center;'>4.3 (8.6, 0.0)</td>
 <td style='text-align: center;'>163</td>
@@ -134,13 +134,13 @@
 <td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>1</td>
+<td style='text-align: center;'>1</td>
+<td style='text-align: center;'>TRUE</td>
 <td style='text-align: center;'>90.2 (65.1, 99.5)</td>
 <td style='text-align: center;'>13.5 (5.0, 26.0)</td>
-<td style='text-align: center;'>270.3 (102.1, 536.9)</td>
-<td style='text-align: center;'>296.7 (560.5, 560.5)</td>
 <td style='text-align: center;'>267.9 (496.6, 496.6)</td>
 <td style='text-align: center;'>413.7 (1022.1, 1022.1)</td>
-<td style='text-align: center;'>77.6 (86.2, 70.7)</td>
 <td style='text-align: center;'>77.6 (87.9, 72.4)</td>
 <td style='text-align: center;'>74.1 (79.3, 56.9)</td>
 <td style='text-align: center;'>58</td>
@@ -150,13 +150,13 @@
 <td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>2</td>
+<td style='text-align: center;'>2</td>
+<td style='text-align: center;'>TRUE</td>
 <td style='text-align: center;'>72.5 (14.8, 96.7)</td>
 <td style='text-align: center;'>12.0 (0.4, 50.6)</td>
-<td style='text-align: center;'>558.3 (1.8, 2802.1)</td>
-<td style='text-align: center;'>669.7 (2539.4, 2539.4)</td>
 <td style='text-align: center;'>599.9 (1969.5, 1969.5)</td>
 <td style='text-align: center;'>920.6 (>5500, >5500)</td>
-<td style='text-align: center;'>62.5 (100.0, 37.5)</td>
 <td style='text-align: center;'>62.5 (100.0, 50.0)</td>
 <td style='text-align: center;'>62.5 (100.0, 0.0)</td>
 <td style='text-align: center;'>16</td>
@@ -166,13 +166,13 @@
 <td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>0</td>
+<td style='text-align: center;'>1</td>
+<td style='text-align: center;'>TRUE</td>
 <td style='text-align: center;'>96.0 (57.6, 99.9)</td>
 <td style='text-align: center;'>48.5 (3.1, 94.8)</td>
-<td style='text-align: center;'>528.4 (1.6, >3000)</td>
-<td style='text-align: center;'>1040.8 (>3000, >3000)</td>
 <td style='text-align: center;'>619.1 (>3000, >3000)</td>
 <td style='text-align: center;'>847.5 (>3000, >3000)</td>
-<td style='text-align: center;'>8.0 (96.0, 0.0)</td>
 <td style='text-align: center;'>12.0 (96.0, 0.0)</td>
 <td style='text-align: center;'>12.0 (96.0, 0.0)</td>
 <td style='text-align: center;'>25</td>
@@ -182,13 +182,13 @@
 <td style='text-align: center;'>4</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
+<td style='text-align: center;'>0</td>
+<td style='text-align: center;'>2</td>
+<td style='text-align: center;'>TRUE</td>
 <td style='text-align: center;'>95.6 (67.5, 99.8)</td>
 <td style='text-align: center;'>33.6 (1.4, 90.2)</td>
-<td style='text-align: center;'>615.8 (4.4, >5500)</td>
-<td style='text-align: center;'>1001.1 (>5500, >5500)</td>
 <td style='text-align: center;'>669.8 (>5500, >5500)</td>
 <td style='text-align: center;'>1047.0 (>5500, >5500)</td>
-<td style='text-align: center;'>7.1 (21.4, 0.0)</td>
 <td style='text-align: center;'>7.1 (100.0, 0.0)</td>
 <td style='text-align: center;'>7.1 (21.4, 0.0)</td>
 <td style='text-align: center;'>28</td>
@@ -198,13 +198,13 @@
 <td style='border-bottom: 2px solid grey; text-align: center;'>4</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>WT</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>WT</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>1</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>2</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>TRUE</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>92.4 (61.0, 99.7)</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>22.4 (2.9, 52.5)</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>469.3 (13.6, 1780.7)</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>620.7 (2511.6, 2511.6)</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>476.7 (1624.9, 1624.9)</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>852.4 (4479.0, 4479.0)</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>60.9 (78.3, 34.8)</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>60.9 (87.0, 39.1)</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>60.9 (65.2, 17.4)</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>23</td>
