--- a/results/wt_wave_results_children.html
+++ b/results/wt_wave_results_children.html
@@ -1,6 +1,7 @@
 <table class='gmisc_table' style='border-collapse: collapse; margin-top: 1em; margin-bottom: 1em;' >
 <thead>
 <tr>
+<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Age</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Wave</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Variant assessed before wave</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Variant assessed after wave</th>
@@ -8,88 +9,116 @@
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Only seropositives pre-wave</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Probability of increased titres at minimal pre-wave antibody levels (%, 95% CrI)</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Probability of increased titres at maximal pre-wave antibody levels (%, 95% CrI)</th>
+<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Max - min</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>50% reduction threshold (WHO BAU/ml, median, 95% CrI)</th>
-<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>N</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>N increased</th>
-<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Doses pre-wave</th>
-<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Doses post-wave</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Proportion of seropositives with pre-wave antibody titres higher than threshold (median)</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Proportion of seropositives with pre-wave antibody titres higher than threshold (2.5% CrI)</th>
 <th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>Proportion of seropositives with pre-wave antibody titres higher than threshold (97.5% CrI)</th>
-<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>N in subgroup</th>
+<th style='font-weight: 900; border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>N</th>
 </tr>
 </thead>
 <tbody>
 <tr>
+<td style='text-align: center;'>child</td>
 <td style='text-align: center;'>2</td>
 <td style='text-align: center;'>Beta</td>
 <td style='text-align: center;'>Beta</td>
 <td style='text-align: center;'>TRUE</td>
 <td style='text-align: center;'>TRUE</td>
-<td style='text-align: center;'>33.5 (28.0, 42.4)</td>
-<td style='text-align: center;'>6.2 (0.9, 13.8)</td>
-<td style='text-align: center;'>21.7 (2.9, 48.5)</td>
-<td style='text-align: center;'>366</td>
+<td style='text-align: center;'>33.3 (28.0, 39.1)</td>
+<td style='text-align: center;'>7.8 (3.0, 15.4)</td>
+<td style='text-align: center;'>-25.5 (-33.2, -16.4)</td>
+<td style='text-align: center;'>31.7 (5.7, 47.7)</td>
 <td style='text-align: center;'>99</td>
-<td style='text-align: center;'>Total</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>76.1% (86)</td>
+<td style='text-align: center;'>75.2% (85)</td>
 <td style='text-align: center;'>62.8% (71)</td>
-<td style='text-align: center;'>87.6% (99)</td>
+<td style='text-align: center;'>82.3% (93)</td>
 <td style='text-align: center;'>366</td>
 </tr>
 <tr>
+<td style='text-align: center;'>child</td>
 <td style='text-align: center;'>2</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>TRUE</td>
 <td style='text-align: center;'>TRUE</td>
-<td style='text-align: center;'>34.4 (28.9, 44.9)</td>
-<td style='text-align: center;'>7.5 (1.1, 16.0)</td>
-<td style='text-align: center;'>38.8 (2.4, 136.9)</td>
-<td style='text-align: center;'>366</td>
+<td style='text-align: center;'>33.8 (28.4, 39.5)</td>
+<td style='text-align: center;'>8.8 (3.6, 17.4)</td>
+<td style='text-align: center;'>-24.8 (-33.3, -15.0)</td>
+<td style='text-align: center;'>77.2 (3.3, 151.1)</td>
 <td style='text-align: center;'>102</td>
-<td style='text-align: center;'>Total</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>71.2% (89)</td>
-<td style='text-align: center;'>54.4% (68)</td>
-<td style='text-align: center;'>82.4% (103)</td>
+<td style='text-align: center;'>65.6% (82)</td>
+<td style='text-align: center;'>51.2% (64)</td>
+<td style='text-align: center;'>80.0% (100)</td>
 <td style='text-align: center;'>366</td>
 </tr>
 <tr>
+<td style='text-align: center;'>child</td>
+<td style='text-align: center;'>3</td>
+<td style='text-align: center;'>Delta</td>
+<td style='text-align: center;'>Delta</td>
+<td style='text-align: center;'>TRUE</td>
+<td style='text-align: center;'>TRUE</td>
+<td style='text-align: center;'>53.2 (5.4, 64.4)</td>
+<td style='text-align: center;'>64.6 (14.8, 76.9)</td>
+<td style='text-align: center;'>13.5 (-45.6, 60.7)</td>
+<td style='text-align: center;'>2.0 (0.3, 2762.6)</td>
+<td style='text-align: center;'>215</td>
+<td style='text-align: center;'>97.8% (176)</td>
+<td style='text-align: center;'>0.0% (0)</td>
+<td style='text-align: center;'>100.0% (180)</td>
+<td style='text-align: center;'>364</td>
+</tr>
+<tr>
+<td style='text-align: center;'>child</td>
 <td style='text-align: center;'>3</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>WT</td>
 <td style='text-align: center;'>TRUE</td>
 <td style='text-align: center;'>TRUE</td>
-<td style='text-align: center;'>59.1 (53.1, 64.9)</td>
-<td style='text-align: center;'>21.7 (3.5, 42.8)</td>
-<td style='text-align: center;'>115.1 (50.1, 255.2)</td>
-<td style='text-align: center;'>366</td>
+<td style='text-align: center;'>58.0 (52.1, 63.9)</td>
+<td style='text-align: center;'>26.2 (10.4, 51.7)</td>
+<td style='text-align: center;'>-31.9 (-48.2, -4.4)</td>
+<td style='text-align: center;'>115.9 (50.5, 809.5)</td>
 <td style='text-align: center;'>199</td>
-<td style='text-align: center;'>Total</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>19.4% (38)</td>
-<td style='text-align: center;'>5.6% (11)</td>
-<td style='text-align: center;'>51.5% (101)</td>
+<td style='text-align: center;'>18.9% (37)</td>
+<td style='text-align: center;'>0.0% (0)</td>
+<td style='text-align: center;'>51.0% (100)</td>
 <td style='text-align: center;'>366</td>
 </tr>
 <tr>
+<td style='text-align: center;'>child</td>
+<td style='text-align: center;'>4</td>
+<td style='text-align: center;'>Omicron</td>
+<td style='text-align: center;'>Omicron</td>
+<td style='text-align: center;'>TRUE</td>
+<td style='text-align: center;'>TRUE</td>
+<td style='text-align: center;'>84.8 (77.3, 91.2)</td>
+<td style='text-align: center;'>52.3 (9.0, 69.5)</td>
+<td style='text-align: center;'>-32.1 (-75.4, -13.9)</td>
+<td style='text-align: center;'>25.9 (10.4, 130.8)</td>
+<td style='text-align: center;'>282</td>
+<td style='text-align: center;'>31.3% (82)</td>
+<td style='text-align: center;'>2.7% (7)</td>
+<td style='text-align: center;'>66.8% (175)</td>
+<td style='text-align: center;'>365</td>
+</tr>
+<tr>
+<td style='border-bottom: 2px solid grey; text-align: center;'>child</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>4</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>WT</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>WT</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>TRUE</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>TRUE</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>83.6 (77.4, 89.9)</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>13.6 (0.5, 45.3)</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>247.5 (115.5, 443.4)</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>366</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>82.0 (75.8, 88.9)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>27.9 (4.7, 55.4)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>-54.1 (-78.7, -24.9)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>202.1 (98.4, 412.2)</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>270</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>Total</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'></td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>11.5% (32)</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>4.0% (11)</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>31.7% (88)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>15.1% (42)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>5.0% (14)</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>36.3% (101)</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>366</td>
 </tr>
 </tbody>
